--- a/knowls/index.html
+++ b/knowls/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-
+    <h1 class="text-blue-300">Life is beautiful</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
